# WordsofWar

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BertSeqVect.py  Cleaning_Data.ipynb  EDA.ipynb  Exploring_and_BasicNN.ipynb  Makefile  Modeling.ipynb  README.md  X_test.csv  X_val.csv  pyproject.toml  requirements-dev.txt  requirements.txt  y_test.csv
.github/workflows/: ci.yml
.virtual_documents/notebooks/: Cleaning_Data.ipynb  EDA.ipynb
Data_Files/: y_val.csv
Jupyter_Notebooks/: Cleaning_Data.ipynb  EDA.ipynb  Modeling.ipynb
Python_Modules/: BertSeqVect.py  __init__.py  plot_history.py
data/: y_train.csv
images/: hello.txt
modules/: BertSeqVect.py
notebooks/: Cleaning_Data.ipynb  EDA.ipynb  Modeling.ipynb
src/words_of_war/: __init__.py  bert_vectorizer.py  config.py  data_utils.py  evaluation.py  interpretability.py  models.py  plot_history.py  text_processing.py  visualization.py
tests/: conftest.py  test_bert_vectorizer.py  test_config.py  test_data_utils.py  test_evaluation.py  test_interpretability.py  test_models.py  test_plot_history.py  test_text_processing.py  test_visualization.py
