[project]
name = "wordsofwar"
version = "2.0.0"
description = "Deep learning NLP analysis of US presidential rhetoric to predict involvement in major wars"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<7.0",
    "flake8>=7.1,<8.0",
    "mypy>=1.14,<2.0",
    "nbstripout>=0.8.0,<1.0",
    "pre-commit>=4.0,<5.0",
]

[project.urls]
Repository = "https://github.com/WD-Scott/WordsofWar"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = [".venv", "notebooks"]
